* Ninja fix for env dialog's overflow problem * Added preliminary interim-eval color

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/environment-dialog.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/environment-dialog.scss
@@ -59,7 +59,7 @@
   flex-direction: column;
   font-family: $text-font-family;
   height: 100%;
-  overflow: auto;
+  max-height: 100vh;
   width: 100%;
 
   @include breakpoint($breakpoint-desktop) {
@@ -93,11 +93,12 @@
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 1;
+  overflow: auto;
   padding: 0 10px;
 }
 
 .env-dialog__footer {
-  padding: 0 10px 10px;
+  padding: 10px;
 }
 
 .env-dialog__actions {
@@ -146,7 +147,6 @@
 .env-dialog__row--options {
   align-items: center;
   display: flex;
-  padding: 10px 0;
 }
 
 // This encapsulates titles and selection that appear on the same row
